Frontend: - pages: Athlete, Home, Account (to be finished) - hooks: useAuthentication - Services:    - userServices: logout, checkAuth, update    - athleteServices: updateAthlete, deleteAthlete, generateCode - Components:    - Authentication Provider (new)    - RequireAuthentication (new)    - RequireNoAuthentication (new)    - Button (new)    - LogoutPopup (new)    - Sidebar (update)    - ObjectList (update) - Utils: epochConverter, epochConverterToAge - Types: User, Activities - more: newScrollbar Backend: - CheckAuth operation - updateUser operation - removing code when changing athlete credentials
Also:
- api.yaml updated
