# backend/waveCoach/http/src/main/kotlin/waveCoach/http/model/input/AuthCheckOutputModel.kt
@@ -1,0 +1,6 @@
+package waveCoach.http.model.input
+
+data class AuthCheckOutputModel(
+    val id: Int,
+    val username: String
+)
