# backend/waveCoach/http/src/main/kotlin/waveCoach/http/model/input/UserUpdateInputModel.kt
@@ -1,0 +1,6 @@
+package waveCoach.http.model.input
+
+data class UserUpdateInputModel(
+    val username: String,
+    val password: String,
+)
